# MiguSC

./: .gitignore  CMakeLists.txt  FindOpenMesh.cmake  FindSuiteSparse.cmake  FindSuperLU.cmake
src/: CMakeLists.txt  main.cpp  main.h  util.h
src/nl/: nl.lib
src/qt/: Edit.cpp  Edit.h  QtGui.cpp  QtGui.h  QtGui.qrc  QtGui.ui  QtGui.vcxproj  QtGui.vcxproj.filters  Show.cpp  Show.h  cvmain.cpp  cvmain.h  global.h  main.cpp  trans.h  util.h
src/qt/GeneratedFiles/: qrc_QtGui.cpp  ui_QtGui.h
src/qt/GeneratedFiles/Debug/: moc_Edit.cpp  moc_QtGui.cpp  moc_Show.cpp
src/triangle/: CMakeLists.txt  triangle.c  triangle_api.c  triangle_api.h  triangle_internal.h  util.c  util.h
